--- a/app/src/main/res/layout/activity_listar_pessoa_activity.xml
+++ b/app/src/main/res/layout/activity_listar_pessoa_activity.xml
@@ -12,9 +12,10 @@
         android:id="@+id/lvPessoas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
