--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -10,7 +10,8 @@
         />
     <item
         android:id="@+id/app_bar_search"
+        android:icon="@android:drawable/ic_menu_search"
         android:title="Consultar"
         app:actionViewClass="android.widget.SearchView"
-        />
+        app:showAsAction="ifRoom|collapseActionView" />
 </menu>
